--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -62,6 +62,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="{% static 'jquery/jquery37.js' %}"></script>
+  <script src="{% static 'jquery/custom.js' %}"></script>
   <script src="{% static 'jquery/popper.js' %}"></script>
   <script src="{% static 'dist/js/bootstrap.min.js' %}"></script>
 <!--    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
