--- a/mysite/templates/saleview.html
+++ b/mysite/templates/saleview.html
@@ -25,67 +25,42 @@
         </button>
       </div>
       <div class="modal-body">
-        <table class="table table-hover">
+        <table class="table table-hover" id="itmlist">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Item Name</th>
+      <th scope="col">Price</th>
+      <th scope="col">Qty</th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
-
+{% for i in itm %}
   <tr>
       <th scope="row">
-        The International Society of Plastic and Aesthetic Nurses THE definitive voice
+        
+        <span class="itmname">{{i.item_name}}</span>
       </th>
       <td>
-        1000000
+       
+        <span class="itmprice">{{i.price}}</span>
+        <span class="itmid" hidden>{{i.id}}</span>
       </td>
       <td>
-        <input type="number" name="iqty" id="iqty" class="form-control w-75">
+        <input type="number" name="iqty" class="form-control w-75 iqty">
       </td>
       <td>
-        <button type="submit" class="btn btn-success">Add</button>
+        
+        <button type="submit" class="btn btn-success itmAdd">Add</button>
       </td>
     </tr>
-
-  <tr>
-      <th scope="row">
-        The International Society of Plastic and Aesthetic Nurses THE definitive voice
-      </th>
-      <td>
-        1000000
-      </td>
-      <td>
-        <input type="number" name="iqty" id="iqty2" class="form-control w-75">
-      </td>
-      <td>
-        <button type="submit" class="btn btn-success">Add</button>
-      </td>
-    </tr>
-  <tr>
-      <th scope="row">
-        The International Society of Plastic and Aesthetic Nurses THE definitive voice
-      </th>
-      <td>
-        1000000
-      </td>
-      <td>
-        <input type="number" name="iqty" id="iqty3" class="form-control w-75">
-      </td>
-      <td>
-        <button type="submit" class="btn btn-success">Add</button>
-      </td>
-    </tr>
-
+{% endfor %}
 
   </tbody>
 </table>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
+        
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
@@ -97,7 +72,7 @@
   </div>
       <hr>
 
-    <table class="table table-hover">
+    <table class="table table-hover" id="invitmlist">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -107,63 +82,15 @@
     </tr>
   </thead>
   <tbody>
+    {% for inv in invitem %}
     <tr>
       <th scope="row">1</th>
       <td>Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
     </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
+    {% endfor %}
+    
     <tr>
       <th scope="row"></th>
       <td></td>
@@ -181,6 +108,9 @@
 
     </div>
 </div>
+
+
+
 
 
 
