--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="{% static 'dist/css/bootstrap.min.css' %}">
 <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
 
+<!--    data table -->
+    <link rel="stylesheet" href="{% static 'datatable/css/dataTables.bootstrap4.css' %}">
+    <link rel="stylesheet" href="{% static 'datatable/css/datatable.css' %}">
+    <link rel="stylesheet" href="{% static 'datatable/css/datatable.min.css' %}">
+
     <title>Hello, world!</title>
   </head>
   <body>
@@ -65,6 +70,14 @@
   <script src="{% static 'jquery/custom.js' %}"></script>
   <script src="{% static 'jquery/popper.js' %}"></script>
   <script src="{% static 'dist/js/bootstrap.min.js' %}"></script>
+
+<!--  Data Table -->
+  <script src="{% static 'datatable/js/datatables.js' %}"></script>
+  <script src="{% static 'datatable/js/datatables.min.js' %}"></script>
+  <script src="{% static 'datatable/js/dataTables.bootstrap4.js' %}"></script>
+  <script src="{% static 'datatable/custom.js' %}"></script>
+
+
 <!--    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
 <!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
 <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>-->
