--- a/mysite/templates/saleview.html
+++ b/mysite/templates/saleview.html
@@ -9,8 +9,11 @@
   <div class="card-body">
 
   <div class="form-row">
+
     <div class="col-7">
-      <input type="text" class="form-control" placeholder="Customer Name">
+
+<!--      <input type="text" class="form-control" placeholder="Customer Name">-->
+        <button type="button" class="btn btn-outline-success" id="createNewVou">Create New Voucher</button>
     </div>
     <div class="col">
       <button type="button" class="btn btn-success" data-toggle="modal" data-target=".add-product-modal">Add Product</button>
@@ -28,10 +31,10 @@
         <table class="table table-hover" id="itmlist">
   <thead>
     <tr>
-      <th scope="col">Item Name</th>
-      <th scope="col">Price</th>
-      <th scope="col">Qty</th>
-      <th scope="col"></th>
+      <th scope="">Item Name</th>
+      <th >Price</th>
+      <th scope="" class="float-right">Qty</th>
+      <th scope=""></th>
     </tr>
   </thead>
   <tbody>
@@ -47,7 +50,7 @@
         <span class="itmid" hidden>{{i.id}}</span>
       </td>
       <td>
-        <input type="number" name="iqty" class="form-control w-75 iqty">
+        <input type="number" name="iqty" class="form-control w-50 iqty float-right">
       </td>
       <td>
         
