--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -11,9 +11,9 @@
 <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
 
 <!--    data table -->
-    <link rel="stylesheet" href="{% static 'datatable/css/dataTables.bootstrap4.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'datatable/css/dataTables.bootstrap4.css' %}"> -->
     <link rel="stylesheet" href="{% static 'datatable/css/datatable.css' %}">
-    <link rel="stylesheet" href="{% static 'datatable/css/datatable.min.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'datatable/css/datatable.min.css' %}"> -->
 
     <title>Hello, world!</title>
   </head>
@@ -73,8 +73,8 @@
 
 <!--  Data Table -->
   <script src="{% static 'datatable/js/datatables.js' %}"></script>
-  <script src="{% static 'datatable/js/datatables.min.js' %}"></script>
-  <script src="{% static 'datatable/js/dataTables.bootstrap4.js' %}"></script>
+  <!-- <script src="{% static 'datatable/js/datatables.min.js' %}"></script> -->
+  <!-- <script src="{% static 'datatable/js/dataTables.bootstrap4.js' %}"></script> -->
   <script src="{% static 'datatable/custom.js' %}"></script>
 
 
