ajax invoice preview

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -18,8 +18,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <a class="navbar-brand" href="#">Company Name Co.,ltd</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,10 +47,7 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
   </div>
 </nav>
 
@@ -71,6 +68,8 @@
   <script src="{% static 'jquery/popper.js' %}"></script>
   <script src="{% static 'dist/js/bootstrap.min.js' %}"></script>
 
+<!--  create invoice pos view-->
+<script src="{% static 'jquery/createinv.js' %}"></script>
 <!--  Data Table -->
   <script src="{% static 'datatable/js/datatables.js' %}"></script>
   <!-- <script src="{% static 'datatable/js/datatables.min.js' %}"></script> -->
